fixed action menus z-index property
git-svn-id: http://svn.plone.org/svn/collective/collective.geo.openlayers/trunk@116761 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/collective/geo/openlayers/browser/geo-openlayers.css
+++ b/collective/geo/openlayers/browser/geo-openlayers.css
@@ -1,7 +1,9 @@
-/*@import url(theme/default/style.css);*/
+/* drop down menus fix */
+#contentActionMenus dl.actionMenu.activated dd {z-index:1008}
+
 
 div.olMap {
-	z-index: 0;
+    z-index: 0;
     padding: 0px!important;
     margin: 0px!important;
     cursor: default;
